# muxt

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md
src/: CMakeLists.txt  channel.c  channel.h  ftmgr.c  ftmgr.h  ftq.c  ftq.h  log.h  msz.c  muxt.c  serial.c  slip.c  slip.h
tools/: qnx-toolchain.cmake
